[package]
name = "skelphore"
version = "0.1.0"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Structured output helpers for display mode "
repository = "https://github.com/kryvashek/skelphore"
license = "MIT"
keywords = ["web", "http", "request", "ping"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
async-trait = "0.1.51"
const_format = "0.2.24"
cubob = "1.1"
humantime-serde = "1.1.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_with = "2.0"
thiserror = "1.0"

[dev-dependencies]
enum-iterator = "0.8"
toml = "0.5"