[package]
name = "skelphore"
version = "0.3.0"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Massive repeated HTTP(S) requests simplifier"
repository = "https://github.com/kryvashek/skelphore"
license = "MIT"
keywords = ["web", "http", "request", "ping"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
async-trait = "0.1.57"
const_format = "0.2.26"
cubob = "1.1"
humantime-serde = "1.1.1"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.145", default-features = false, features = ["std", "derive"] }
serde_with = "2.0.1"
thiserror = "1.0.31"

[dev-dependencies]
enum-iterator = "0.8"
toml = "0.5.9"