[package]
name = "skelphore"
version = "0.4.2"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Massive repeated HTTP(S) requests simplifier"
repository = "https://github.com/kryvashek/skelphore"
license = "MIT"
keywords = ["web", "http", "request", "ping"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
async-trait = "0.1.57"
const_format = "0.2.26"
cubob = { version = "1.3.2", default-features = false, features = ["struct"] }
humantime-serde = "1.1.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.145", default-features = false, features = ["std", "derive"] }
serde_with = "3.4"
thiserror = "1.0.31"

[dev-dependencies]
enum-iterator = "1.4.1"
toml = "0.8.8"

[features]
default = ["pinger"]
pinger = []